[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/AlternateView/SortPanelScene.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Panel" type="Panel"]
show_behind_parent = true
margin_left = 1.0
margin_right = 443.0
margin_bottom = 64.0
rect_min_size = Vector2( 420, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -16.0
margin_right = 211.5
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_top = 9.0
margin_right = 53.0
margin_bottom = 23.0
text = "Sort By: "

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 57.0
margin_right = 95.0
margin_bottom = 32.0
text = "Size"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 99.0
margin_right = 149.0
margin_bottom = 32.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="HBoxContainer"]
margin_left = 153.0
margin_right = 221.0
margin_bottom = 32.0
text = "Modified"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 225.0
margin_top = 9.0
margin_right = 271.0
margin_bottom = 23.0
text = "Search:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 275.0
margin_right = 375.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 379.0
margin_right = 423.0
margin_bottom = 32.0
text = "Clear"
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
